# SNAP-visual-audio-engine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  ReadMe.md  cmake_install.cmake
SNAP-visual-audio-engine/: SNAP-visual-audio-engine.sln  SNAP-visual-audio-engine.vcxproj  SNAP-visual-audio-engine.vcxproj.filters  SONARBackEnd.cpp  SharedMemoryDLL.h  SharedMemoryDLL.lib  audio_config.cpp  audio_config.h  config_module.cpp  config_module.h  config_types.h  file_input.cpp  file_input.h  get_exe_directory.cpp  get_exe_directory.h  input_module.cpp  input_module.h  main.cpp  openal_module.cpp  openal_module.h  opencv_module.cpp  opencv_module.h  shared_mem_input.cpp  shared_mem_input.h  stdafx.h  visual_audio_algorithm.cpp  visual_audio_algorithm.h  visual_audio_engine.cpp  visual_audio_engine.h
include/: BlenderToDepthMapDLL.h  stdafx.h
src/: BlenderToDepthMapDLL.cpp  SONARBackEndOld.cpp  main.cpp
